@@ -1,0 +1,54 @@
+LIBRARY RTUTILS.DLL
+EXPORTS
+CreateWaitEvent@40
+CreateWaitEventBinding@20
+CreateWaitTimer@16
+DeRegisterWaitEventBinding@4
+DeRegisterWaitEventBindingSelf@4
+DeRegisterWaitEventsTimers@8
+DeRegisterWaitEventsTimersSelf@8
+DebugPrintWaitWorkerThreads@4
+LogErrorA@16
+LogErrorW@16
+LogEventA@16
+LogEventW@16
+MprSetupProtocolEnum@12
+MprSetupProtocolFree@4
+QueueWorkItem@12
+RegisterWaitEventBinding@4
+RegisterWaitEventsTimers@8
+RouterAssert@16
+RouterGetErrorStringA@8
+RouterGetErrorStringW@8
+RouterLogDeregisterA@4
+RouterLogDeregisterW@4
+RouterLogEventA@24
+RouterLogEventW@24
+RouterLogEventDataA@28
+RouterLogEventDataW@28
+RouterLogEventExA@24
+RouterLogEventExW@24
+RouterLogEventStringA@28
+RouterLogEventStringW@28
+RouterLogEventValistExA@24
+RouterLogEventValistExW@24
+RouterLogRegisterA@4
+RouterLogRegisterW@4
+SetIoCompletionProc@8
+TraceDeregisterA@4
+TraceDeregisterW@4
+TraceDeregisterExA@8
+TraceDeregisterExW@8
+TraceDumpExA@28
+TraceDumpExW@28
+TraceGetConsoleA@8
+TraceGetConsoleW@8
+TracePutsExA@12
+TracePutsExW@12
+TraceRegisterExA@8
+TraceRegisterExW@8
+TraceVprintfExA@8
+TraceVprintfExW@8
+UpdateWaitTimer@8
+WTFreeEvent@4
+WTFreeTimer@4
